--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/Uppalanchi-Venkatesh/example#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
